# dtoy

./: .clang-format  CMakeLists.txt  language.enbf  roadmap.md
libs/core/: CMakeLists.txt
libs/core/include/: enviroment.h  expr.h  interpreter.h  parser.h  scanner.h  stmt.h  token.h
libs/core/src/: parser.cpp  scanner.cpp  token.cpp
main/: CMakeLists.txt  main.cpp
tests/: CMakeLists.txt  test_interpreter.cpp  test_parser.cpp  test_scanner.cpp  test_token.cpp
